--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "foodmin-course",
     "version": "1.0.0",
+    "engines": {
+        "node": ">=18 <19"
+    },
 
     "scripts": {
         "start": "cd backend/built && node server.js",
